Added the instructions to increase JVM heapsize and permgen space when running the modules in test modus with maven